<resources>
    <string name="app_name">Opus</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="hint_email_title">E-mail</string>
    <string name="hint_first_password_form">Пароль</string>
    <string name="hint_user_name">Имя</string>
    <string name="hint_user_surname">Фамилия</string>
    <string name="hint_second_password_from">Повторите пароль</string>
    <string name="enter">Войти</string>
    <string name="sign_up_enter">Продолжить</string>
    <string name="sign_up">Регистрация</string>
    <string name="main_screen_greeting_title">У вас уже есть аккаунт?</string>
    <string name="login_screen_greeting_title">Давно не заходили</string>
    <string name="sign_up_screen_greeting_title">Рады с Вами познакомиться</string>
    <string name="caption_under_app_title">Расскажите о Ваших навыках</string>

    <string name="error_name">Неправильно введено имя</string>
    <string name="error_surname">Неправильно введена фамилия</string>
    <string name="error_email">Неправильно введен e-mail</string>
    <string name="error_password">Неправильно введён пароль</string>
    <string name="error_confirmed_password">Пароли не совпадают</string>
    <string name="success_confirmed_password">Пароли совпали</string>

    <string name="radio_button_office">Офис</string>
    <string name="radio_button_support">Поддержка</string>
    <string name="radio_button_apps">Приложения</string>
    <string name="radio_button_sales">Продажи</string>
    <string name="radio_button_software_engineering">Разарботка ПО</string>
    <string name="radio_button_telecom">Телеком</string>
    <string name="radio_button_testing">Тестирование</string>
    <string name="radio_button_frondend">Фронтенд</string>
    <string name="radio_button_other">Другое</string>
    <string name="radio_button_adm">Администрирование</string>
    <string name="radio_button_analytic">Аналитика</string>
    <string name="radio_button_backend">Бэкенд</string>
    <string name="radio_button_design">Дизайн</string>
    <string name="radio_button_inf_security">Информационная безопасность</string>
    <string name="radio_button_hr">Кадры</string>
    <string name="radio_button_content">Контент</string>
    <string name="radio_button_marketing">Маркетинг</string>
    <string name="radio_button_management">Менеджмент</string>
    <string name="info_title_field_of_activity">Чем Вы занимаетесь?</string>

    <string-array name="activity_fields">
        <item>Администрирование</item>
        <item>Офис</item>
        <item>Аналитика</item>
        <item>Поддержка</item>
        <item>Бэкэнд</item>
        <item>Приложения</item>
        <item>Дизайн</item>
        <item>Продажи</item>
        <item>Информационная безопасность</item>
        <item>Разработка ПО</item>
        <item>Кадры</item>
        <item>Телеком</item>
        <item>Контент</item>
        <item>Тестирование</item>
        <item>Марткетинг</item>
        <item>Фронтенд</item>
        <item>Менеджмент</item>
        <item>Другое</item>
    </string-array>

    <string-array name="skills_arr">
        <item>android</item>
        <item>C++</item>
        <item>MVVM</item>
        <item>C#</item>
        <item>Kotlin</item>
        <item>CI/CD</item>
        <item>android</item>
        <item>C++</item>
        <item>MVVM</item>
        <item>C#</item>
        <item>Kotlin</item>
        <item>CI/CD</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>