<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/root_left_border"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/vertical_border_screen_margins" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/root_right_border"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/vertical_border_screen_margins" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/root_middle_border"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.56" />

    <TextView
        android:id="@+id/app_title_form"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_form"
        android:text="@string/app_name"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/AppTitleAppearance.SecondAppTitleAppearance"
        app:layout_constraintEnd_toEndOf="@id/root_right_border"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/root_left_border"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/info_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_title_field_of_activity"
        android:textAppearance="@style/SubtitleTextAppearance.SecondSubtitleAppearance"
        app:layout_constraintEnd_toEndOf="@id/root_right_border"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/root_left_border"
        app:layout_constraintTop_toBottomOf="@id/app_title_form" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items_field_of_activity"
        android:layout_width="0dp"
        android:overScrollMode="never"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="51dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_base"
        app:layout_constraintEnd_toStartOf="@id/root_right_border"
        app:layout_constraintStart_toEndOf="@id/root_left_border"
        app:layout_constraintTop_toBottomOf="@id/info_title" />


    <TextView
        android:id="@+id/btn_base"
        android:textAppearance="@style/ButtonTextStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_btn"
        android:layout_marginBottom="51dp"
        android:background="@drawable/shape_btn_enter_with_stroke"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/sign_up_enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/root_right_border"
        app:layout_constraintStart_toStartOf="@id/root_left_border" />


</androidx.constraintlayout.widget.ConstraintLayout>
